--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Astro and Tailwindcss boilerplate",
   "author": "Themefisher",
   "license": "MIT",
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
