--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Astrofront",
+  "name": "Livespace Online",
   "version": "2.0.0",
   "description": "Astro and Tailwindcss boilerplate",
   "author": "Themefisher",
